// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAppVersionsByBuildNumber groups app versions by build number 1`] = `
Array [
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-123",
        "buildNumber": 32,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "123",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "groupName": "32",
  },
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-456",
        "buildNumber": 31,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "456",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "groupName": "31",
  },
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-789",
        "buildNumber": 30,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "789",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "groupName": "30",
  },
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-135",
        "buildNumber": 29,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "135",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.2",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "groupName": "29",
  },
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-246",
        "buildNumber": 28,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "246",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.2",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "groupName": "28",
  },
]
`;

exports[`getAppVersionsByVersion groups app versions by version 1`] = `
Array [
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-123",
        "buildNumber": 32,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "123",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-456",
        "buildNumber": 31,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "456",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-789",
        "buildNumber": 30,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "789",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "groupName": "1.0.3",
  },
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-135",
        "buildNumber": 29,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "135",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.2",
        "whatsNew": "Some longer whats-new",
      },
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-246",
        "buildNumber": 28,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "246",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.2",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "groupName": "1.0.2",
  },
]
`;

exports[`orderedAppVersionEvents orders events in descending creation time 1`] = `
Array [
  Object {
    "createdAt": 2019-08-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2019-07-08T00:00:00.000Z,
  },
  Object {
    "createdAt": 2019-06-20T00:00:00.000Z,
  },
]
`;
